<?xml version="1.0" encoding="utf-8"?>

<!--RelativeLayout of AddKitchen activity -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.AddKitchen"
    android:background="@drawable/background"
    >

    <!--AddKitchenAppbar to set AddKitchenToolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AddKitchenAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

        <!--AddKitchenToolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/AddKitchenToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

    </com.google.android.material.appbar.AppBarLayout>

    <!--AddKitchenImageView KitchenImage-->
    <ImageView
        android:id="@+id/AddKitchenImageView"
        android:src="@drawable/kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/AddKitchenAppbar"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
    />

    <!--AddKitchenEditText to insert kitchen name-->
    <EditText
        android:id="@+id/AddKitchenEditName"
        android:inputType="text"
        android:hint="@string/hint_add_kitchen_name"
        android:textColorHint="@color/gray"
        android:autofillHints="@strings/hint_add_kitchen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/AddKitchenImageView"
        android:padding="20dp"
        android:ems="12"
    />

    <!--AddKitchenEditPassword to insert kitchen password-->
    <EditText
        android:id="@+id/AddKitchenEditPassword"
        android:inputType="textPassword"
        android:hint="@string/hint_add_kitchen_password"
        android:autofillHints="Password"
        android:textColorHint="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/AddKitchenEditName"
        android:padding="20dp"
        android:ems="12"
    />

    <!--LinearLayout of add new Kitchen Image-->
    <LinearLayout
        android:layout_below="@+id/AddKitchenEditPassword"
        android:id="@+id/AddKitchenImageLinearLayout"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UseCompoundDrawables"
    >

        <!--AddKitchenImageView AddKitchenImage-->
        <ImageView
            android:id="@+id/AddKitchenImageImageView"
            android:src="@drawable/add_image"
            android:onClick="AddKitchenImageListenerImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            tools:ignore="ContentDescription"
        />

        <!--AddKitchenImageTextViewDescription-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_image_text"
         />

    </LinearLayout>



    <!--LinearLayout of add and cancel buttons-->
    <LinearLayout
    android:layout_below="@+id/AddKitchenImageLinearLayout"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

        <!--AddKitchenAddButton to add kitchen to database-->
        <Button
            android:id="@+id/AddKitchenButton"
            android:text="@string/add_kitchen_add"
            android:onClick="AddKitchenListenerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            style="?android:attr/buttonBarButtonStyle"
        />

        <!--AddKitchenCancelButton to cancel addKitchen at database-->
        <Button
            android:id="@+id/CancelAddKitchenButton"
            android:text="@string/add_kitchen_cancel"
            android:onClick="CancelAddKitchenListenerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            style="?android:attr/buttonBarButtonStyle"
        />

    </LinearLayout>

</RelativeLayout>
